# scouter-app

./: .gitignore  .gitmodules  test-programme-formation.xlsx
.claude/: launch.json
.github/workflows/: ci.yml
.husky/: pre-commit
competency-app/: .gitignore  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  vercel.json  vitest.config.ts
competency-app/docs/: DPA.md
competency-app/scripts/: fix-constraints.sql  seed-formations.ts
competency-app/src/: middleware.ts
competency-app/src/app/: globals.css  layout.tsx
competency-app/src/lib/: audit.ts  legal.ts  logger.test.ts  logger.ts  utils.test.ts  utils.ts
competency-app/supabase/: seed.sql
competency-app/supabase/migrations/: 00001_initial_schema.sql  00002_competency_weighting.sql  00003_app_settings.sql  00004_fix_manager_locations.sql  00005_evaluation_comments.sql  00006_role_overhaul_job_title.sql  00007_batch_module_scores.sql  00008_job_profile_qualifiers.sql  00009_deduplicate_competencies.sql  00010_add_job_title_to_profiles.sql  00011_module_qualifiers.sql  00012_competency_qualifiers.sql  00013_continuous_evaluation_snapshots.sql  00014_add_job_profile_id_to_profiles.sql  00015_multi_job_profiles.sql  00016_add_commercial_admin_modules.sql  00017_worker_comments.sql  00018_formations.sql  00019_formation_user_role.sql  (+12 more)
noah-drive-sync/: .gitignore  README.md  mockup.html  pyproject.toml
noah-drive-sync/docs/: CGU.md  DPA.md
noah-drive-sync/installer/: install_task.bat  setup.iss  setup_admin.iss  uninstall.bat
(+182 files in other folders)
