[project]
name = "noah-drive-sync"
version = "0.1.0"
description = "Sauvegarde mensuelle du backup Noah HIMSA vers Google Drive Vivason"
authors = [{ name = "Ruben Krief" }]
requires-python = ">=3.11"
dependencies = [
  "google-api-python-client>=2.140.0",
  "google-auth-oauthlib>=1.2.1",
  "google-auth-httplib2>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.10.0",
]

[project.scripts]
noah-drive-sync = "noah_drive_sync.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
